--- a/package.json
+++ b/package.json
@@ -8,8 +8,18 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "9.5.3",
+    "eslint": "^7.10.0",
+    "eslint-plugin-react": "^7.21.2",
+    "isomorphic-fetch": "^3.0.0",
+    "next": "^9.5.4-canary.23",
+    "next-images": "^1.6.0",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "sass": "^1.26.11"
+  },
+  "devDependencies": {
+    "@types/node": "^14.11.2",
+    "@types/react": "^16.9.49",
+    "typescript": "^4.0.3"
   }
 }
