--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "^9.5.4-canary.23",
     "next-images": "^1.6.0",
     "react": "16.13.1",
+    "react-debounce-input": "^3.2.2",
     "react-dom": "16.13.1",
     "sass": "^1.26.11"
   },
