--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "eslint": "^7.10.0",
     "eslint-plugin-react": "^7.21.2",
     "isomorphic-fetch": "^3.0.0",
-    "next": "^9.5.4-canary.23",
+    "next": "^10.0.1",
     "next-images": "^1.6.0",
     "react": "16.13.1",
-    "react-debounce-input": "^3.2.2",
+    "react-datepicker": "^3.3.0",
+    "react-debounce-input": "^3.2.3",
     "react-dom": "16.13.1",
+    "react-input-select": "^1.0.3",
+    "react-select": "^3.1.0",
     "sass": "^1.26.11"
   },
   "devDependencies": {
