--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-datepicker": "^3.3.0",
     "react-debounce-input": "^3.2.3",
     "react-dom": "16.13.1",
+    "react-google-maps": "^9.4.5",
     "react-input-select": "^1.0.3",
     "react-loader-spinner": "^3.1.14",
     "react-select": "^3.1.0",
